--- a/MainForm/MainForm.csproj
+++ b/MainForm/MainForm.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RentCar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RentCar.Designer.cs">
+      <DependentUpon>RentCar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddCarWindow.resx">
       <DependentUpon>AddCarWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RentCar.resx">
+      <DependentUpon>RentCar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
